resize canvas to be longer on mobile, prevent coins spawning under joystick etc. center canvas and upgrade menu

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /* Base container */
 #gameContainer {
     position: relative;
-    width: 800px;
-    height: 600px;
+    max-width: 800px;
+    height: auto;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -285,12 +285,14 @@
 @media (max-width: 600px) {
     #gameContainer {
         width: 100%;
-        height: auto;
+        height: 100%;
+       background-size: 100% 100%;
     }
 
     #gameCanvas {
         width: 100%;
-        height: auto;
+        height: 100%;
+        display: block;
     }
 
     #upgradesBtn {
